# ginger-rs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IFLOW.md  README.md  aberth-ai.rs  aberth.hpp  autocorr.hpp  deny.toml  lcov.info  matrix2.hpp  robin-ai.rs  rootfinding.hpp  rustfmt.toml  temp.rs  vector2.hpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codecov.yml  grcov.yml  grcov.yml.bak  rust.yml
benches/: benchmark.rs
proptest-regressions/: vector2.txt
src/: aberth.cpp  aberth.hpp  aberth.rs  aberth_ai.rs  autocorr.cpp  autocorr.hpp  autocorr.trs  greeter.cpp  horner.rs  leja_order.rs  lib.rs  main.rs  matrix2.rs  robin.rs  rootfinding.hpp  rootfinding.rs  rootfinding_ai.rs  spectral_fact.rs  vector2.cpp  vector2.rs  vector2.trs  vector2_ref.rs
