[package]
name = "ginger-rs"
version = "0.1.1"
edition = "2021"
description = "Parallel Bairstow Root-finding Method in Rust"
repository = "https://github.com/luk036/ginger-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ginger"
path = "src/lib.rs"

[dependencies]
lds-rs = "0.1.4"
num-complex = "0.4"
num-traits = "0.2.18"
rayon = "1.10.0"
# ndarray = { version = "0.15.6"}
# ndarray-conv = "0.3.3"

[dev-dependencies]
approx_eq = "0.1.8"
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false
